Faces missing, weird faces added #74024

Closed
opened 2020-02-20 00:38:27 +01:00 by Georg K · 25 comments

System Information
Operating system: Linux-5.4.18-1-MANJARO-x86_64-with-glibc2.2.5 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.4.18-1-MANJARO, LLVM 9.0.1) X.Org 4.5 (Core Profile) Mesa 19.3.4

Blender Version
Broken: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:20, hash: 56d6666689 (bug introduced by https://developer.blender.org/rB56d6666689f7027126e8c115d01564810d1ae1bb)
(also broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-19 23:13, hash: 0c01ad9300)
(also broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-20 17:34, hash: a9b184bbc4)
(also broken: buildbot blender-2.83-ee7f307c9a11-linux64)
Worked: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:14, hash: 20605c4b51 (last working rev)

Short description of error
Some faces are black, some are missing, new weird faces are added when entering edit mode from certain camera angles or they are already there when opening the file (like with the Spring scene). Switching between Object mode and Edit mode makes them disappear sometimes, but not for long.
2.81a:
Weird faces bug (created in 2.81a)_opened in 2.81a.jpg
2.83alpha:
{F8351996}Weird faces bug (created in 2.81a)_opened in 2.83alpha_editMode.jpg
It could be related to https://developer.blender.org/T74019 but it was not fixed by the fix.

New faces also visible in Spring splash scene (https://cloud.blender.org/p/gallery/5d2607ee6b3001d49bab798a) :
Spring splash wire cam.jpg
Spring splash solid cam.jpg
Those are not 2D artifacts but 3D geometry
Spring splash solid top.jpg

Exact steps for others to reproduce the error
This does not happen with every mesh. It seems to be connected to ngon placement, but I cant exactly place my finger on it. Suzanne for example works fine.
Open Weird faces bug (created in 2.81a).blend
in 2.81a and in 2.83 dev. In 2.83 alpha, enter edit mode, move the camera, toggle in and out of edit mode - sometimes the mesh is changed by that.

**System Information** Operating system: Linux-5.4.18-1-MANJARO-x86_64-with-glibc2.2.5 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.4.18-1-MANJARO, LLVM 9.0.1) X.Org 4.5 (Core Profile) Mesa 19.3.4 **Blender Version** Broken: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:20, hash: 56d6666689 (bug introduced by https://developer.blender.org/rB56d6666689f7027126e8c115d01564810d1ae1bb) (also broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-19 23:13, hash: `0c01ad9300`) (also broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-20 17:34, hash: `a9b184bbc4`) (also broken: buildbot blender-2.83-ee7f307c9a11-linux64) Worked: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:14, hash: 20605c4b51 (last working rev) **Short description of error** Some faces are black, some are missing, new weird faces are added when entering edit mode from certain camera angles or they are already there when opening the file (like with the Spring scene). Switching between Object mode and Edit mode makes them disappear sometimes, but not for long. 2.81a: ![Weird faces bug (created in 2.81a)_opened in 2.81a.jpg](https://archive.blender.org/developer/F8351995/Weird_faces_bug__created_in_2.81a__opened_in_2.81a.jpg) 2.83alpha: {[F8351996](https://archive.blender.org/developer/F8351996/Weird_faces_bug__created_in_2.81a__opened_in_2.83alpha_objectMode.jpg)}![Weird faces bug (created in 2.81a)_opened in 2.83alpha_editMode.jpg](https://archive.blender.org/developer/F8351997/Weird_faces_bug__created_in_2.81a__opened_in_2.83alpha_editMode.jpg) It could be related to https://developer.blender.org/T74019 but it was not fixed by the fix. New faces also visible in Spring splash scene (https://cloud.blender.org/p/gallery/5d2607ee6b3001d49bab798a) : ![Spring splash wire cam.jpg](https://archive.blender.org/developer/F8412339/Spring_splash_wire_cam.jpg) ![Spring splash solid cam.jpg](https://archive.blender.org/developer/F8412343/Spring_splash_solid_cam.jpg) Those are not 2D artifacts but 3D geometry ![Spring splash solid top.jpg](https://archive.blender.org/developer/F8412345/Spring_splash_solid_top.jpg) **Exact steps for others to reproduce the error** This does not happen with every mesh. It seems to be connected to ngon placement, but I cant exactly place my finger on it. Suzanne for example works fine. Open [Weird faces bug (created in 2.81a).blend](https://archive.blender.org/developer/F8507806/Weird_faces_bug__created_in_2.81a_.blend) in 2.81a and in 2.83 dev. In 2.83 alpha, enter edit mode, move the camera, toggle in and out of edit mode - sometimes the mesh is changed by that.

Added subscriber: @georgK

Added subscriber: @georgK

This issue was referenced by 56d6666689

This issue was referenced by 56d6666689f7027126e8c115d01564810d1ae1bb

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Cant redo:

  • OS: Linux 5.5.3-arch1-1
  • REV: 1e3ffd1f872b1a52a5c392b135c29ae71744137d
  • GPU: GeForce GTX 1080
Cant redo: * OS: Linux 5.5.3-arch1-1 * REV: `1e3ffd1f872b1a52a5c392b135c29ae71744137d` * GPU: `GeForce GTX 1080`

Also can't redo on skylake with integrated intel graphics, so I think this is related to AMD graphics.

Just to be sure, I clean built everything (same git revision), but the problem persists:
install_deps.sh --with-all --with-oidn --skip-osl --skip-embree --build-usd
(embree is giving errors so I had to skip it, usd is not found even with build-usd but building is successful anyway)

make -j8 BUILD_CMAKE_ARGS="-U SNDFILE -U PYTHON -U BOOST -U Boost -U OPENCOLORIO -U OPENEXR -U OPENIMAGEIO -U LLVM -U CYCLES -U OPENSUBDIV -U OPENVDB -U COLLADA -U FFMPEG -U ALEMBIC -U USD -D WITH_CODEC_SNDFILE=ON -D PYTHON_VERSION=3.8 -D WITH_OPENCOLORIO=ON -D WITH_CYCLES_OSL=OFF -D WITH_LLVM=OFF -D WITH_OPENSUBDIV=ON -D WITH_OPENVDB=ON -D WITH_OPENVDB_BLOSC=ON -D WITH_OPENCOLLADA=ON -D WITH_OPENIMAGEDENOISE=ON -D OPENIMAGEDENOISE_ROOT_DIR=/home/georg/Programme/blender-git/deps/oidn -D WITH_JACK=ON -D WITH_JACK_DYNLOAD=ON -D WITH_ALEMBIC=ON -D ALEMBIC_ROOT_DIR=/home/georg/Programme/blender-git/deps/alembic -D WITH_USD=ON -D WITH_CODEC_FFMPEG=ON -D FFMPEG_LIBRARIES='avformat;avcodec;avutil;avdevice;swscale;swresample;lzma;rt;theora;theoradec;theoraenc;vorbis;vorbisenc;vorbisfile;ogg;xvidcore;vpx;opus;mp3lame;x264;openjp2'"

Always have to modify PYTHON_VERSION to 3.8 manually, but I guess that is not the problem here.

Also can't redo on skylake with integrated intel graphics, so I think this is related to AMD graphics. Just to be sure, I clean built everything (same git revision), but the problem persists: install_deps.sh --with-all --with-oidn --skip-osl --skip-embree --build-usd (embree is giving errors so I had to skip it, usd is not found even with build-usd but building is successful anyway) make -j8 BUILD_CMAKE_ARGS="-U *SNDFILE* -U *PYTHON* -U *BOOST* -U *Boost* -U *OPENCOLORIO* -U *OPENEXR* -U *OPENIMAGEIO* -U *LLVM* -U *CYCLES* -U *OPENSUBDIV* -U *OPENVDB* -U *COLLADA* -U *FFMPEG* -U *ALEMBIC* -U *USD* -D WITH_CODEC_SNDFILE=ON -D PYTHON_VERSION=3.8 -D WITH_OPENCOLORIO=ON -D WITH_CYCLES_OSL=OFF -D WITH_LLVM=OFF -D WITH_OPENSUBDIV=ON -D WITH_OPENVDB=ON -D WITH_OPENVDB_BLOSC=ON -D WITH_OPENCOLLADA=ON -D WITH_OPENIMAGEDENOISE=ON -D OPENIMAGEDENOISE_ROOT_DIR=/home/georg/Programme/blender-git/deps/oidn -D WITH_JACK=ON -D WITH_JACK_DYNLOAD=ON -D WITH_ALEMBIC=ON -D ALEMBIC_ROOT_DIR=/home/georg/Programme/blender-git/deps/alembic -D WITH_USD=ON -D WITH_CODEC_FFMPEG=ON -D FFMPEG_LIBRARIES='avformat;avcodec;avutil;avdevice;swscale;swresample;lzma;rt;theora;theoradec;theoraenc;vorbis;vorbisenc;vorbisfile;ogg;xvidcore;vpx;opus;mp3lame;x264;openjp2'" Always have to modify PYTHON_VERSION to 3.8 manually, but I guess that is not the problem here.

Used git reset --hard 20605c4b51 to go back to "Modifiers: UVWarp modifier add invert vgroup option" (Tue, Feb 18) 20605c4b51 prior to the two GPU commits and that build works fine.
So, working in version: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:14, hash: 20605c4b51

And the bug was introduced by commit 56d6666689 (https://developer.blender.org/rB56d6666689f7027126e8c115d01564810d1ae1bb):
2.83 (sub 4), branch: master, commit date: 2020-02-18 17:20, hash: 56d6666689

Used git reset --hard 20605c4b515e to go back to "Modifiers: UVWarp modifier add invert vgroup option" (Tue, Feb 18) 20605c4b515e prior to the two GPU commits and that build works fine. So, working in version: 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:14, hash: `20605c4b51` And the bug was introduced by commit 56d6666689f7 (https://developer.blender.org/rB56d6666689f7027126e8c115d01564810d1ae1bb): 2.83 (sub 4), branch: master, commit date: 2020-02-18 17:20, hash: `56d6666689`

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I cannot reproduce the problem, but I am confirming, since the commit that introduced the problem has been identified.

I cannot reproduce the problem, but I am confirming, since the commit that introduced the problem has been identified.

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Does it help to start blender with --debug-gpu-force-workarounds If that is the case we should add this configuration to a enable the unused_fb_slot_workaround

Does it help to start blender with `--debug-gpu-force-workarounds` If that is the case we should add this configuration to a enable the unused_fb_slot_workaround

Unfortunately, it does not help.
The situation has worsened in the meantime: in my current build version: 2.83 (sub 9), branch: master, commit date: 2020-03-15 18:22, hash: 22925d0dd3 there are additional artifacts and trying to open the Spring splash scene (https://cloud.blender.org/p/gallery/5d2607ee6b3001d49bab798a) crashes blender. Both new problems are also exclusive to my HD7770 system and persist even if I revert commit 56d6666689, so I will make new reports.
Do you think you may have to drop support for GCN 1st gen systems like my Southern Islands HD7770 in the near future?

Unfortunately, it does not help. The situation has worsened in the meantime: in my current build version: 2.83 (sub 9), branch: master, commit date: 2020-03-15 18:22, hash: `22925d0dd3` there are additional artifacts and trying to open the Spring splash scene (https://cloud.blender.org/p/gallery/5d2607ee6b3001d49bab798a) crashes blender. Both new problems are also exclusive to my HD7770 system and persist even if I revert commit 56d6666689f7, so I will make new reports. Do you think you may have to drop support for GCN 1st gen systems like my Southern Islands HD7770 in the near future?

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

I found something: The trigger for this issue is material slot assignment!
Take our default cube, add two material slots (one is not enough), enter edit mode, assign one face to material slot 1 and a second face to material slot 2 - the second face vanishes! The material slots do not need to contain materials.
The additional geometry is only added to the sphere, so the shape seems to have an effect, too.

The artifacts are also in eevee F12 renders.

Weird faces bug - material slots (2.90beta)_comparison.jpg
Weird faces bug - material slots (2.90beta).blend

In the Spring splash scene, removing 2 material slots on each eye removed all artifacts.

I found something: The trigger for this issue is material slot assignment! Take our default cube, add two material slots (one is not enough), enter edit mode, assign one face to material slot 1 and a second face to material slot 2 - the second face vanishes! The material slots do not need to contain materials. The additional geometry is only added to the sphere, so the shape seems to have an effect, too. The artifacts are also in eevee F12 renders. ![Weird faces bug - material slots (2.90beta)_comparison.jpg](https://archive.blender.org/developer/F8507763/Weird_faces_bug_-_material_slots__2.90beta__comparison.jpg) [Weird faces bug - material slots (2.90beta).blend](https://archive.blender.org/developer/F8507764/Weird_faces_bug_-_material_slots__2.90beta_.blend) In the Spring splash scene, removing 2 material slots on each eye removed all artifacts.

The issue is still present in 2.90 alpha with latest mesa 20.0.7:

System Information
Operating system: Linux-5.4.43-1-MANJARO-x86_64-with-glibc2.29 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.4.43-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 12:22, hash: 45dbc38a8b

In addition to my last post, I found another problem without material slots involved: a primitive circle with default settings is displayed as a radius line (looks normal in Edit mode, but crashes when moving the viewport camera).
Weird faces bug - circle.jpg

Testing the three code changes from commit 56d6666689 separately (ignoring the variable declaration):
reverting 1,2,3: issue gone, but Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender.
reverting 1: issue still there, Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender.
reverting 2: "
reverting 3: "
reverting 1+3: issue gone, but Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender.
reverting 2+3: "

The crashes occurred in 2.90 only, not in 2.83LTS (version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7) but the visual problems are in both versions.

Is there anything I can do to help you solve this?

The issue is still present in 2.90 alpha with latest mesa 20.0.7: **System Information** Operating system: Linux-5.4.43-1-MANJARO-x86_64-with-glibc2.29 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.4.43-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 12:22, hash: `45dbc38a8b` In addition to my last post, I found another problem without material slots involved: a primitive circle with default settings is displayed as a radius line (looks normal in Edit mode, but crashes when moving the viewport camera). ![Weird faces bug - circle.jpg](https://archive.blender.org/developer/F8572596/Weird_faces_bug_-_circle.jpg) Testing the three code changes from commit 56d6666689f7 separately (ignoring the variable declaration): reverting 1,2,3: issue gone, but Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender. reverting 1: issue still there, Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender. reverting 2: " reverting 3: " reverting 1+3: issue gone, but Blender crashes when trying to move the viewport camera in the Spring scene (object mode). In the circle scene, I can rotate the camera in object mode, but trying to rotate the camera in Edit mode crashes Blender. reverting 2+3: " The crashes occurred in 2.90 only, not in 2.83LTS (version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7`) but the visual problems are in both versions. Is there anything I can do to help you solve this?

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

I honestly think this is a Mesa bug. The crash in 2.90 might be a separate issue. Please try with the latest build to see if the crash is fixed.

Maybe we can whitelist your GPU to always have the workaround.

Can you check if this patch fixes the issue:

index ab55fcfb1e0..03d4cde985e 100644
    - a/source/blender/gpu/intern/gpu_extensions.c
+++ b/source/blender/gpu/intern/gpu_extensions.c
@@ -273,8 +273,8 @@ void gpu_extensions_init(void)

const char *renderer = (const char *)glGetString(GL_RENDERER);
const char *version = (const char *)glGetString(GL_VERSION);

 
- if (GPU_type_matches(GPU_DEVICE_ATI, GPU_OS_WIN, GPU_DRIVER_OFFICIAL)) {
- if (strstr(version, "4.5.13399") || strstr(version, "4.5.13417") ||
+  if (true || GPU_type_matches(GPU_DEVICE_ATI, GPU_OS_WIN, GPU_DRIVER_OFFICIAL)) {
+    if (true || strstr(version, "4.5.13399") || strstr(version, "4.5.13417") ||
   strstr(version, "4.5.13422")) {
 /* The renderers include:
        *   Mobility Radeon HD 5000;```
I honestly think this is a Mesa bug. The crash in 2.90 might be a separate issue. Please try with the latest build to see if the crash is fixed. Maybe we can whitelist your GPU to always have the workaround. Can you check if this patch fixes the issue: ```diff --git a/source/blender/gpu/intern/gpu_extensions.c b/source/blender/gpu/intern/gpu_extensions.c index ab55fcfb1e0..03d4cde985e 100644 - a/source/blender/gpu/intern/gpu_extensions.c +++ b/source/blender/gpu/intern/gpu_extensions.c @@ -273,8 +273,8 @@ void gpu_extensions_init(void) ``` const char *renderer = (const char *)glGetString(GL_RENDERER); const char *version = (const char *)glGetString(GL_VERSION); ``` - if (GPU_type_matches(GPU_DEVICE_ATI, GPU_OS_WIN, GPU_DRIVER_OFFICIAL)) { - if (strstr(version, "4.5.13399") || strstr(version, "4.5.13417") || + if (true || GPU_type_matches(GPU_DEVICE_ATI, GPU_OS_WIN, GPU_DRIVER_OFFICIAL)) { + if (true || strstr(version, "4.5.13399") || strstr(version, "4.5.13417") || ``` strstr(version, "4.5.13422")) { /* The renderers include: ``` * Mobility Radeon HD 5000;```

The crash was indeed unrelated and has been fixed in the meantime.

Your patch works, everything is fine now. Thanks a lot!

The crash was indeed unrelated and has been fixed in the meantime. Your patch works, everything is fine now. Thanks a lot!

@georgK can you give us your system-info.txt so we can limit the fix to your GPU + OS?

@georgK can you give us your `system-info.txt` so we can limit the fix to your GPU + OS?

here you are system-info.txt

here you are [system-info.txt](https://archive.blender.org/developer/F8651080/system-info.txt)

This issue was referenced by 592e306236

This issue was referenced by 592e306236defaf5f84bb6aa2638013e95b02fac

This issue was referenced by 6d8b6aec18

This issue was referenced by 6d8b6aec1874f997da8e944f85313e28ced6b911

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-28 15:51:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74024
There is no content yet.