Fix T74024 Faces missing, weird faces added

Workaround by adding a special case for that driver in gpu_extensions.c